erDiagram
    PATIENTS ||--o{ MEDICAL_RECORDS : "has records"
    DOCTORS ||--o{ MEDICAL_RECORDS : "creates"
    PATIENTS ||--o| ADMIN_USERS : "may have account"
    ADMIN_USERS ||--o{ AUDIT_LOG : "generates"
    
    PATIENTS {
        int patient_id PK "Auto-increment"
        varchar first_name "NOT NULL"
        varchar last_name "NOT NULL"
        date date_of_birth "NOT NULL"
        varchar ssn "UNIQUE, SENSITIVE - XXX-XX-XXXX"
        varchar insurance_id "NOT NULL, SENSITIVE"
        varchar phone_number
        varchar email
        text address "SENSITIVE"
        varchar emergency_contact
        timestamp created_at
        timestamp updated_at
    }
    
    DOCTORS {
        int doctor_id PK "Auto-increment"
        varchar first_name "NOT NULL"
        varchar last_name "NOT NULL"
        varchar specialization "NOT NULL"
        varchar license_number "UNIQUE, SENSITIVE"
        varchar phone_number
        varchar email
        varchar department
        date hire_date
        boolean is_active "DEFAULT TRUE"
        timestamp created_at
    }
    
    MEDICAL_RECORDS {
        int record_id PK "Auto-increment"
        int patient_id FK "NOT NULL, CASCADE DELETE"
        int doctor_id FK "NOT NULL, RESTRICT DELETE"
        timestamp visit_date "NOT NULL"
        text diagnosis "NOT NULL, SENSITIVE"
        text treatment "SENSITIVE"
        text medication "SENSITIVE"
        text notes "SENSITIVE"
        date follow_up_date
        boolean is_confidential "DEFAULT FALSE"
        timestamp created_at
    }
    
    ADMIN_USERS {
        int user_id PK "Auto-increment"
        varchar username "UNIQUE, NOT NULL"
        varchar password_hash "NOT NULL, SENSITIVE"
        varchar role "CHECK: admin|doctor|nurse|patient"
        varchar first_name
        varchar last_name
        varchar email
        boolean is_active "DEFAULT TRUE"
        timestamp last_login
        int failed_login_attempts "DEFAULT 0"
        timestamp locked_until
        timestamp created_at
        int patient_id FK "Optional link to PATIENTS"
    }
    
    AUDIT_LOG {
        int log_id PK "Auto-increment"
        int user_id "NOT NULL, no FK constraint"
        varchar username
        varchar action "NOT NULL"
        text query "SQL query executed"
        varchar result_status "CHECK: SUCCESS|ERROR|BLOCKED"
        varchar security_mode "CHECK: vulnerable|secure"
        varchar ip_address
        text user_agent
        varchar execution_time
        int rows_affected
        text error_message
        timestamp timestamp "NOT NULL"
    }